fix: overflow auto

--- a/forms/src/pages/SubmitAnswerPage/components/form/AnswerType/LongAnswer/LongAnswer.scss
+++ b/forms/src/pages/SubmitAnswerPage/components/form/AnswerType/LongAnswer/LongAnswer.scss
@@ -2,7 +2,6 @@
     border: none;
     border-bottom: solid;
     padding: 10px;
-    overflow: auto;
     width:17rem;
     height: 500rem;
     margin-right: 2rem;
